--- a/templates/db2.html
+++ b/templates/db2.html
@@ -5,7 +5,10 @@
         <link rel="stylesheet" href="static/style.css">
     <body>
     <div class=" filter"></div>
-        
+
+        <div class="heading">
+            <h1>ACM Web Recruitments Task</h1>
+        </div>        
         <table>
             <tr>
                 <th>#</th>
